--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: 'easycoreregular';
+	src: url('/fonts/easycore-webfont.eot');
+	src: url('/fonts/easycore-webfont.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/easycore-webfont.woff2') format('woff2'),
+		url('/fonts/easycore-webfont.woff') format('woff'),
+		url('/fonts/easycore-webfont.ttf') format('truetype'),
+		url('/fonts/easycore-webfont.svg#easycoreregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+$heading-font: "easycoreregular";
+
 .wrapper {
   background: #bada55;
   color: #d12028;
@@ -841,7 +855,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Lato";
+  font-family: $heading-font;
   color: #f5f5f5;
   font-weight: 100;
   letter-spacing: 1px;
