Separate out font and basic styles, move into own dir

--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ html
 			title 🔪 and 🔫
 			meta(charset='utf-8')
 			script(src='slides.js')
-			link(href='styles.css'  rel='stylesheet' type='text/css')
+			link(href='css/styles.css'  rel='stylesheet' type='text/css')
 		body
 			section.slides.layout-regular.template-default
 
