--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,134 +1,6 @@
-@font-face {
-	font-family: 'easycoreregular';
-	src: url('/fonts/easycore-webfont.eot');
-	src: url('/fonts/easycore-webfont.eot?#iefix') format('embedded-opentype'),
-		url('/fonts/easycore-webfont.woff2') format('woff2'),
-		url('/fonts/easycore-webfont.woff') format('woff'),
-		url('/fonts/easycore-webfont.ttf') format('truetype'),
-		url('/fonts/easycore-webfont.svg#easycoreregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-$heading-font: "easycoreregular";
-
-b {
-  font-weight: 600;
-}
-.blue {
-  color: #06c;
-}
-.yellow {
-  color: #ffd319;
-}
-.green {
-  color: #29e254;
-}
-.red {
-  color: #f00;
-}
-.black {
-  color: #000;
-}
-.white {
-  color: #fff;
-}
-
-a {
-  color: #f5f5f5;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  display: block !important;
-  height: 100%;
-  min-height: 740px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: $heading-font;
-  color: #f5f5f5;
-  font-weight: 100;
-  letter-spacing: 1px;
-  line-height: 1;
-  text-shadow: 5px 5px 0 rgba(0,0,0,0.3);
-  margin: 15px 0;
-}
-
-h1 {
-  font-size: 96px;
-  line-height: 96px;
-  padding: 0;
-  margin: 0;
-  color: #fff;
-  a {
-    text-decoration: none;
-    font-size: 20px;
-    color: #000;
-    padding-left: 10px;
-  }
-}
-
-h2 {
-	font-size: 45px;
-	line-height: 45px;
-	bottom: 150px;
-	padding: 0;
-	margin: 0;
-	font-weight: 600;
-	color: #fff;
-	letter-spacing: -2px;
-  font-size: 128px;
-  color: #f5f5f5;
-  line-height: 1;
-  margin: 0;
-	a {
-	  text-decoration: none;
-	}
-}
-
-h3 {
-	font-size: 20px;
-	line-height: 36px;
-	padding: 0 0 10px 0;
-	margin: 0;
-	padding-right: 40px;
-	font-weight: 600;
-	letter-spacing: -1px;
-	color: #eaeaea;
-  font-size: 70px;
-  color: #f5f5f5;
-  line-height: 1.5;
-}
-
-h4 {
-	margin: 0;
-  color: #f5f5f5;
-  font-size: 50px;
-}
-
-p, a, li {
-  text-shadow: 4px 3px 0 rgba(0,0,0,0.3);
-  margin: 15px 0;
-}
-
-p, li, small {
-  color: #fff;
-  font-size: 50px;
-  font-weight: 700;
-}
-
-small {
-  font-size: 25px;
-}
-
+// Basic settings
+@import "fonts";
+@import	"universal";
 
 .large {
   font-size: 200px;
