More border box to universal SCSS

--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -1,5 +1,12 @@
 $heading-font: "easycoreregular";
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 b {
   font-weight: 600;
 }
