More cleanups, fix background off by one error

--- a/index.jade
+++ b/index.jade
@@ -20,12 +20,12 @@ html
 						a(href='http://twitter.com/mikemaccana',style="text-decoration: none;") @mikemaccana
 
 				article.plain
-					h1 THIS IS A TALK ABOUT WHAT WILL WORK.
+					h1 THIS <br>WILL<br> WORK.
 
 				article
 					img(src="images/ev-ssl.png")
 					h2 <br/>CertSimple does EV
-					p Background checks to confirm legal entity comtrolling a website
+					p Background checks to confirm legal entity behind a site
 
 				article.plain
 					h1(style="font-size: 192pt;") CertSimple do it 40-100x faster than Symantec, GoDaddy, etc.
