More work on slides

--- a/index.jade
+++ b/index.jade
@@ -25,13 +25,14 @@ html
 				article
 					img(src="images/ev-ssl.png")
 					h2 <br/>CertSimple does EV
-					p Background checks to confirm legal entity behind a site
+					p Confirms legal entity behind a site
+					p Normally a pain in the arse to get.
 
 				article.plain
-					h1(style="font-size: 192pt;") CertSimple do it 40-100x faster than Symantec, GoDaddy, etc.
+					h1(style="font-size: 192pt;") CertSimple do EV 40-100x faster than Symantec, GoDaddy, and Comodo.
 
 				article
-					h2 Connects to APIs for:
+					h2 We connect to APIs for:
 					ul.build
 						li Government data for 100M companies in 63 countries
 						li 60+ independent data sources
@@ -41,13 +42,7 @@ html
 					h1 Problem
 					ul.build
 						li Some data sources don't have APIs at all
-						li Most have bad/poor APIs
-
-				article
-					h1 Bad APIs
-					ul.build
-						li Functionality exposed through UI isn't available in API
-						li Functionality exposed via email isn't available in API
+						li API exists, but missing some functionality exposed through UI
 						li No webhooks, so no realtime
 
 				article
@@ -55,7 +50,7 @@ html
 					p All the things you'll wish you knew earlier
 
 				article
-					h1 THE SCALPEL APPROACH
+					h1 THE SCALPEL
 					p Use this 95% of the time
 
 				article
@@ -89,10 +84,10 @@ html
 					h1 Complete node scalpel approach
 
 				article
-					h1 WHEN THE SCALPEL DOESN'T WORK
+					h1 THE AK47
 
 				article
-					h3 When you absolutely, positively, got to scrape every element in the DOM
+					h3 When you absolutely, positively, got to get every datum in the data
 
 				article
 					h2 Some pages can't be scraped
@@ -118,17 +113,14 @@ html
 						li Various things on GitHub can defeat CloudFlare
 
 				article
-					h1 CASPER ISN'T NODE OR V8
-
-				article
 					h1 CASPER REALLY ISN'T NODE OR V8
 
 				article
 					h2 Casper is it's own runtime
 					ul.build
-						li #!/usr/bin/env casperjs starts python
-						li #!/usr/bin/env casperjs starts ruby
-						li #!/usr/bin/env casperjs starts node (v8)
+						li #!/usr/bin/env python starts python
+						li #!/usr/bin/env ruby starts ruby
+						li #!/usr/bin/env node starts node (v8)
 						li #!/usr/bin/env casperjs starts casper (JavaScriptCore)
 
 				article
@@ -143,7 +135,9 @@ html
 
 				article
 					h1 Launching something?
-					h1 £80 off CertSimple
+
+				article
+					h1 £80 quid off CertSimple
 
 				article
 					h1 Stickers!
