--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -51,7 +51,7 @@ h1 {
   font-family: $heading-font;
   padding: 0;
   margin: 0;
-  color: #fff;
+  color: $pale-blue;
   a {
     text-decoration: none;
     font-size: 20px;
@@ -68,7 +68,7 @@ h2 {
   padding: 0;
   margin: 0;
   font-weight: 300;
-  color: #fff;
+  color: $pale-blue;
   letter-spacing: -2px;
   color: $gray;
   margin: 0;
@@ -86,13 +86,13 @@ h3 {
   padding-right: 40px;
   font-weight: 600;
   letter-spacing: -1px;
-  color: #eaeaea;
+  color: $pale-blue;
   color: $gray;
   line-height: 1.5;
 }
 
 h4 {
-   margin: 0;
+  margin: 0;
   color: $gray;
   font-size: 50px;
 }
@@ -103,7 +103,7 @@ p, a, li {
 }
 
 p, li, small {
-  color: #fff;
+  color: $pale-blue;
   font-size: 50px;
   font-weight: 700;
 }
@@ -204,7 +204,7 @@ code {
 iframe {
 	width: 100%;
 	height: 620px;
-	background: #fff;
+	background: $pale-blue;
 	border: 1px solid #c0c0c0;
 	margin: -1px;
 /*box-shadow: inset 0 2px 6px rgba(0, 0, 0, .1);*/
